# village_shop

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  FPSMilestones.txt  LICENSE  README.md
client/: CMakeLists.txt
client/cmake/: FindZLIB.cmake
client/resources/anim/: char_anim_down.json  char_anim_left.json  char_anim_right.json  char_anim_up.json  char_princess_up.json  enemy_base_anim.json  sprite_anim_01.json
client/resources/config/: settings.ini
client/resources/game_data/: game_data_2048.json  wave_data.json
client/resources/levels/: level_1.lvl  tilemap_01.csv  tilemap_02.csv  tilemap_03.csv  tilemap_04.csv  tilemap_1.csv
client/resources/shaders/hlsl/: helpers.hlsl  lit.hlsl  lit_alpha.hlsl  sprite.hlsl  sprite_atlas.hlsl  sprite_instanced.hlsl  sprite_instanced_atlas.hlsl  structs.hlsl  ui_sprite.hlsl  ui_text.hlsl  unlit.hlsl  unlit_alpha.hlsl
client/resources/shaders/metal/: basic.metal  basic_2D.metal  basic_alpha_cutout.metal  first.metal  first.shader  second.metal  sprite.metal  sprite_instanced.metal
client/resources/texture_data/: atlas_01.json  atlas_02.json  atlas_char_8.json  atlas_dice.json  atlas_enemy.json  atlas_fireball.json  atlas_princess.json  atlas_ui.json  font_atlas_01.json
client/resources/textures/: fourbyfour.ppm
client/resources/textures/characters/: princess.dds
client/resources/textures/enemies/: enemy_atlas.dds
client/resources/textures/font/: ascii_ibm_transparent.dds
client/resources/textures/sprites/: fireball.dds
client/resources/textures/ui/: ui_atlas.dds
client/src/: main.cpp  main_mac.cpp
client/src/FileIO/INI/: INIParser.cpp  INIParser.h
client/src/Game/: game.cpp  game.h  villager.cpp  villager.h
client/src/Input/: InputManager.cpp  InputManager.h  InputManagerMac.cpp  InputManagerMac.h  InputManagerWin.cpp  InputManagerWin.h
client/src/Rendering/: renderer.cpp  renderer.h
client/src/TimeManagement/: TimeManager.cpp  TimeManager.h
client/src/anim/: animation_system.cpp  animation_system.h  sprite_anim_clip.cpp  sprite_anim_clip.h  sprite_animator.cpp  sprite_animator.h
client/src/audio/: audio_impl_dummy.h  audio_impl_miniaudio.cpp  audio_impl_miniaudio.h  audio_system.cpp  audio_system.h
client/src/datastructure/: ring_buffer.h
client/src/file_io/ini/: ini_parser.cpp
client/src/game/: game.cpp  game.h  game_breakout.cpp  game_breakout.h  game_character_test.cpp  game_character_test.h  game_dice_simple.cpp  game_dice_simple.h  game_falling_sand.cpp  game_falling_sand.h  game_game_of_life.cpp  game_game_of_life.h  game_rpg.cpp  game_rpg.h  physics_scene_breakout.cpp  physics_scene_breakout.h  physics_scene_char.cpp  physics_scene_char.h  village_game.cpp  village_game.h  villager.cpp  villager.h  wave_data.h
client/src/input/: input_manager.cpp  input_manager.h  input_manager_cli_mac.cpp  input_manager_cli_mac.h  input_manager_cli_win.cpp  input_manager_cli_win.h  input_manager_mac.cpp  input_manager_mac.h  input_manager_win.cpp  input_manager_win.h
client/src/main/: main_cli.cpp  main_mac.cpp  main_mac.h  main_mac.mm  main_mac2.cpp  main_win.cpp  main_win.h
client/src/math/: fp_24_8.cpp  fp_24_8.h  math.h
client/src/misc/: global_vars.cpp  global_vars.h  utils.cpp  utils.h
client/src/net/: connection.cpp  connection.h  connection_mac.cpp  connection_mac.h  connection_win.cpp  connection_win.h
client/src/platform/mac/: app_delegate.h  app_delegate.mm  main_mac.mm  metal_view.h  metal_view.mm  view_delegate.h  view_delegate.mm
client/src/platform/win/: win_main.cpp
client/src/random/: random_engine.cpp  random_engine.h
client/src/rendering/: renderer.cpp  renderer.h
client/src/rendering/directx/: d3dx12.h  (+31 more)
client/src/scene/: level_breakout.cpp  level_breakout.h  level_creator_breakout.cpp  level_creator_breakout.h  scene.cpp  scene.h  scene_breakout.cpp  scene_breakout.h  scene_character_test.cpp  scene_character_test.h  scene_dice_simple.cpp  scene_dice_simple.h  scene_dx.cpp  scene_dx.h  scene_falling_sand.cpp  scene_falling_sand.h  scene_game_of_life.cpp  scene_game_of_life.h  scene_metal.cpp  scene_metal.h  scene_rpg.cpp  scene_rpg.h  scene_ui.cpp  scene_ui.h  scene_ui_dx.cpp  scene_ui_dx.h  scene_ui_hud.cpp  scene_ui_hud.h
client/src/time/: time_manager.cpp  time_manager.h
client/src/ui/: geometry.cpp  geometry.h  ui_layout_engine.cpp  ui_layout_engine.h
client/src/utils/: json_utils.cpp  json_utils.h
client/src/world/: tile.cpp  tile.h  tilemap.h
client_package/: CMakeLists.txt
client_package/doc/: tdd_v1.txt
client_package/resources/: res_list_win.json
client_package/src/: main.cpp  pkg_win.cpp  pkg_win.h  resource_list.h
client_tests/: CMakeLists.txt
client_tests/src/: test_runner.cpp  test_runner.h
client_tests/src/FileIO/: INIParser_tests.cpp  INIParser_tests.h
client_tests/src/datastructures/: grid_tests.cpp  ring_buffer_tests.cpp  ring_buffer_tests.h
client_tests/src/file_io/: ini_parser_tests.cpp  ini_parser_tests.h
client_tests/src/math/: vector_tests.cpp  vector_tests.h
logging/: CMakeLists.txt
logging/src/: logging.cpp  logging.h
server/: CMakeLists.txt
server/src/: main.cpp
server/src/misc/: global_vars.cpp  global_vars.h
server/src/net/: socket_server.cpp  socket_server.h  socket_server_mac.cpp  socket_server_mac.h  socket_server_win.cpp  socket_server_win.h
shared/: CMakeLists.txt
shared/src/datastructure/: grid.h  ring_buffer.h
shared/src/math/: fp_24_8.cpp  fp_24_8.h  math.cpp  math.h  matrix4.cpp  matrix4.h  transform.cpp  transform.h  vec16.cpp  vec16.h  vec2.cpp  vec2.h  vec2i.cpp  vec2i.h  vec3.cpp  vec3.h  vec3i.cpp  vec3i.h  vec4.cpp  vec4.h
shared/src/misc/: game_constants.h  utils.cpp  utils.h
shared/src/net/: net_packet.cpp  net_packet.h  net_protocol.h  net_utils.cpp  net_utils.h
shared/src/physics/: collider.h  collider_aabb.cpp  collider_aabb.h  physics_layer.h  physics_scene.cpp  physics_scene.h  physics_system.cpp  physics_system.h
shared/src/random/: random_engine.cpp  random_engine.h  random_utils.h  stb_perlin.cpp
shared/src/time/: time_manager.cpp  time_manager.h
(+63 files in other folders)
